// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FindingIssuesForm tests FindingIssuesForm isErrorMessage snapshot 1`] = `
"<form class=\\"finding-form\\">
  <h1 class=\\"finding-form__title\\">Enter repository name</h1>
  <div class=\\"finding-form__content\\"><label for=\\"finding-repository\\" class=\\"finding-form__label\\"><input id=\\"finding-repository\\" class=\\"finding-form__input\\" type=\\"text\\" name=\\"finding-input\\" placeholder=\\"vuejs/vue\\"></label><button class=\\"finding-form__button\\" type=\\"submit\\"> Search </button></div>
</form>
<!--v-if-->
<div class=\\"finding-error-message\\">Nothing found</div>"
`;

exports[`FindingIssuesForm tests FindingIssuesForm isErrorMessage with message snapshot 1`] = `
"<form class=\\"finding-form\\">
  <h1 class=\\"finding-form__title\\">Enter repository name</h1>
  <div class=\\"finding-form__content\\"><label for=\\"finding-repository\\" class=\\"finding-form__label\\"><input id=\\"finding-repository\\" class=\\"finding-form__input\\" type=\\"text\\" name=\\"finding-input\\" placeholder=\\"vuejs/vue\\"></label><button class=\\"finding-form__button\\" type=\\"submit\\"> Search </button></div>
</form>
<!--v-if-->
<div class=\\"finding-error-message\\">test message</div>"
`;

exports[`FindingIssuesForm tests FindingIssuesForm isLoader snapshot 1`] = `
"<form class=\\"finding-form\\">
  <h1 class=\\"finding-form__title\\">Enter repository name</h1>
  <div class=\\"finding-form__content\\"><label for=\\"finding-repository\\" class=\\"finding-form__label\\"><input id=\\"finding-repository\\" class=\\"finding-form__input\\" type=\\"text\\" name=\\"finding-input\\" placeholder=\\"vuejs/vue\\"></label><button class=\\"finding-form__button\\" type=\\"submit\\"> Search </button></div>
</form>
<div class=\\"preloader\\"></div>
<!--v-if-->"
`;

exports[`FindingIssuesForm tests FindingIssuesForm snapshot 1`] = `
"<form class=\\"finding-form\\">
  <h1 class=\\"finding-form__title\\">Enter repository name</h1>
  <div class=\\"finding-form__content\\"><label for=\\"finding-repository\\" class=\\"finding-form__label\\"><input id=\\"finding-repository\\" class=\\"finding-form__input\\" type=\\"text\\" name=\\"finding-input\\" placeholder=\\"vuejs/vue\\"></label><button class=\\"finding-form__button\\" type=\\"submit\\"> Search </button></div>
</form>
<!--v-if-->
<!--v-if-->"
`;
